fitness_cluster/image2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weifit-calcii
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: mac
  template:
    metadata:
      labels:
        tier: mac
    spec:
      serviceAccountName: development
      terminationGracePeriodSeconds: 20
      priorityClassName: fitnesspriority
      containers:
        - name: image2
          image: furkhan2000/fitness-tracker-app:weifit-calculator
          imagePullPolicy: Always 
          ports:
            - containerPort: 4040
          volumeMounts:
            - name: store
              mountPath: /pvc-data1
          resources:
            requests:
              cpu: "700m"
              memory: "500Mi"
          livenessProbe:
            tcpSocket:
              port: 4040
            initialDelaySeconds: 5
            periodSeconds: 10
      volumes:
        - name: store
          persistentVolumeClaim:
            claimName: pvc2
---
apiVersion: v1
kind: Service
metadata:
  name: svc2
spec:
  selector:
    tier: mac
  ports:
    - port: 4040
      protocol: TCP
      targetPort: 4040
